--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,3 +12,8 @@
 @import './components/startproject.scss';
 @import './components/sectionheader.scss';
 @import './components/work.scss';
+@import './components/tickerslider.scss';
+@import './components/services.scss';
+@import './components/service.scss';
+@import './components/insights.scss';
+@import './components/article.scss';
