--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -2,7 +2,7 @@
     @include font-size(1.5);
     grid-column: bleed-start / bleed-end;
     background-color: #ffffff;
-    padding: 50px 0;
+    padding: $unit-xxlarge 0;
     position: relative;
 
     &::before {
@@ -39,7 +39,7 @@
     grid-column: main-start / main-end;
     display: grid;
     grid-template-columns: repeat(12, [col-start] 1fr);
-    gap: 20px;
+    gap: 0 20px;
     z-index: 2;
 }
 
@@ -90,15 +90,15 @@
     margin: 0;
 
     @include media('>=tablet') {
-        margin-left: 50px;
+        margin-left: $unit-xlarge;
     }
 
     @include media('>=desktop') {
-        margin: 0 50px;
+        margin: 0 $unit-xlarge;
     }
 
     ul {
-        margin-bottom: 48px;
+        margin-bottom: $unit-xlarge;
 
         @include media('>=tablet') {
             margin: 0;
@@ -110,16 +110,38 @@
         @include font-size(1.5);
         display: block;
         color: #ffffff;
-        margin-bottom: 24px;
+        margin-bottom: $unit-small;
     }
 
     span {
-        margin-bottom: 28px;
+        margin-bottom: $unit;
+    }
+
+    a {
+        position: relative;
+
+        &::after {
+            content: '';
+            background-color: #ffffff;
+            bottom: -5px;
+            height: 1px;
+            left: 0;
+            position: absolute;
+            width: 100%;
+            transform: scaleX(0);
+            transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        }
+
+        &:hover {
+            &::after {
+                transform: scaleX(1);
+            }
+        }
     }
 }
 
 .c-footer__section-header {
     @include font-size(1.5);
     color: #868585;
-    margin-bottom: 16px;
+    margin-bottom: $unit-xsmall;
 }
