--- a/styles/components/_homeservices.scss
+++ b/styles/components/_homeservices.scss
@@ -1,58 +1,62 @@
 .c-home-services {
     display: grid;
     grid-template-columns: repeat(12, [col-start] 1fr);
-    gap: 20px;
-    padding: 24px 0;
+    gap: 0 20px;
+    //padding: 24px 0;
     position: relative;
 
     @include media('>=desktop') {
-        padding: 70px 0;
+        //padding: 70px 0;
     }
 }
 
 .c-home-services__inner {
+    @include global-component-margins();
     grid-column: col-start 1 / span 12;
     display: grid;
     grid-template-columns: repeat(12, [col-start] 1fr);
-    gap: 20px;
+    gap: 0 20px;
     z-index: 2;
 
     @include media('>=desktop') {
-        grid-column: col-start 2 / span 12;
+        grid-column: col-start 2 / span 10;
     }
 }
 
 .c-home-services__header {
     grid-column: col-start 1 / span 10;
-    margin-bottom: 40px;
+    margin-bottom: $unit-large;
 
     @include media('>=desktop') {
         grid-column: col-start 1 / span 4;
-        margin-bottom: 48px;
+        margin-bottom: $unit-xlarge;
     }
 }
 
 .c-home-services__items {
-    grid-column: col-start 1 / span 11;
+    grid-column: col-start 1 / span 12;
+    display: grid;
+    grid-template-columns: repeat(12, [col-start] 1fr);
+    gap: $unit-small;
 
     @include media('>=desktop') {
         display: grid;
         grid-template-columns: repeat(12, [col-start] 1fr);
-        gap: 20px 80px;
+        gap: $unit 80px;
     }
 }
 
 .c-home-services__item {
-    grid-column: span 4;
-    padding-bottom: 40px;
+    grid-column: span 6;
+    padding-bottom: $unit-large;
 
     @include media('>=desktop') {
-        grid-column: span 3;
-        padding-bottom: 0;
+        grid-column: span 4;
+        padding-bottom: $unit;
     }
 
     h3 {
-        margin-bottom: 8px;
+        margin-bottom: $unit-xsmall;
     }
 
     p {
@@ -71,4 +75,12 @@
 .c-home-services__slider {
     width: 100%;
     overflow: hidden;
+}
+
+.c-home-services__link {
+    @include font-montserrat-semibold;
+    @include font-size(1.5);
+    color: #029adb;
+    grid-column: col-start 1 / span 12;
+    margin-top: $unit-large;
 }
