--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -1,7 +1,6 @@
 .c-banner {
     position: relative;
-    height: 100vh;
-    width: 100vw;
+    height: calc(100vh + 98px);
 
     @include media('>=desktop') {
         min-height: 750px;
@@ -14,6 +13,7 @@
     gap: 20px;
     align-items: center;
     height: 100vh;
+    position: relative;
 
     @include media('>=desktop') {
         min-height: 750px;
@@ -21,13 +21,32 @@
 }
 
 .c-banner__inner {
+    display: grid;
+    grid-template-columns: repeat(12, [col-start] 1fr);
     grid-column: col-start 1 / span 12;
     text-align: center;
+    align-items: center;
     z-index: 10;
 
     @include media('>=desktop') {
-        grid-column: col-start 2 / span 7;
+        grid-column: col-start 2 / span 6;
         text-align: left;
+    }
+
+    header {
+        grid-column: span 12;
+        order: 2;
+        text-align: center;
+
+        @include media('>=tablet') {
+            order: 1;
+            grid-column: span 7;
+            text-align: left;
+        }
+
+        @include media('>=desktop') {
+            grid-column: span 12;
+        }
     }
 }
 
@@ -43,8 +62,11 @@
     display: none;
     margin-bottom: $unit-small;
 
-    @include media('>=desktop') {
+    @include media('>=tablet') {
         display: block;
+    }
+
+    @include media('>=desktop') {
         margin-bottom: $unit-xlarge;
         width: 80%;
     }
@@ -57,17 +79,23 @@
 
 .c-banner__links {
     display: none;
-    @include media('>=desktop') {
+
+    @include media('>=tablet') {
         display: block;
         position: absolute;
         bottom: 10rem;
+        width: 100%;
     }
 
     ul {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        width: 70%;
+        width: 100%;
+
+        @include media('>=desktop') {
+            width: 40%;
+        }
     }
 
     li {
@@ -113,6 +141,7 @@
     transform: rotateZ(90deg);
     transform-origin: top right;
     overflow: hidden;
+    z-index: 100;
 
     @include media('>=desktop') {
         display: block;
@@ -132,14 +161,26 @@
 }
 
 .c-banner__image-mobile {
-    width: 100%;
+    order: 1;
+    grid-column: span 12;
+
+    @include media('>=tablet') {
+        grid-column: span 5;
+        order: 2;
+        text-align: left;
+    }
+
     @include media('>=desktop') {
         display: none;
     }
 
     img {
         width: 100%;
-        max-width: 100%;
+        max-width: 300px;
+
+        @include media('>=tablet') {
+            max-width: 100%;
+        }
     }
 }
 
@@ -149,14 +190,15 @@
     @include media('>=desktop') {
         display: block;
         position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
+        top: 0;
         right: -3rem;
         width: 45%;
     }
 
     img {
         width: 100%;
+        min-height: 750px;
+        height: 100%;
     }
 }
 
