--- a/styles/settings/_settings.breakpoints.scss
+++ b/styles/settings/_settings.breakpoints.scss
@@ -31,6 +31,7 @@
 $breakpoints: (
     'phone': 320px,
     'tablet': 768px,
+    'lgtablet': 980px,
     'desktop': 1280px,
     'lgdesktop': 1920px,
 ) !default;
