--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -27,7 +27,8 @@
 
 .c-header__mobile-contact {
     @include font-size(1.6);
-    margin-right: auto;
+    position: absolute;
+    left: 20px;
 
     &--isopen {
         color: #ffffff;
@@ -37,13 +38,14 @@
 
 .c-header__logo-mobile {
     z-index: 1000;
+    width: 70px;
 }
 
 .c-header__burger {
-    margin-left: auto;
-    position: relative;
-    width: 50px;
-    height: 32px;
+    right: 20px;
+    position: absolute;
+    width: 30px;
+    height: 20px;
     z-index: 1000;
 
     span {
@@ -76,7 +78,7 @@
             background-color: #ffffff;
             &:first-of-type {
                 transform: rotateZ(45deg);
-                top: 14px;
+                top: 8px;
             }
 
             &:nth-of-type(2) {
@@ -96,6 +98,7 @@
 .c-header__logo {
     margin-right: auto;
     background-color: #000000;
+    width: 80px;
 }
 
 .c-header__nav {
@@ -177,7 +180,7 @@
 }
 
 .c-header__emailus {
-    @include font-size(1.8);
+    @include font-size(1.6);
     position: fixed;
     left: 2rem;
     bottom: 0;
