--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,3 +16,4 @@
 @import './components/service.scss';
 @import './components/insights.scss';
 @import './components/article.scss';
+@import './components/splittext.scss';
