--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -47,8 +47,6 @@
 
     @include media('>=desktop') {
         grid-column: col-start 2 / span 6;
-        gap: 0;
-        padding: 0;
     }
 
     header {
@@ -89,9 +87,20 @@
     }
 }
 
+.c-banner__btn-wrapper {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: all 1s ease-in-out;
+
+    &.is-inview {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 .c-banner__btn {
     display: inline-block;
-    //margin-bottom: $unit-xlarge;
+    //margin-bottom: $unit-xlarge;\
 }
 
 .c-banner__links {
@@ -105,7 +114,6 @@
     }
 
     @include media('>=desktop') {
-        padding: 0;
     }
 
     ul {
