--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -13,6 +13,7 @@
 
     &.is-sticky {
         background-color: white;
+        position: fixed;
     }
 }
 
@@ -187,7 +188,7 @@
 .c-header__emailus {
     @include font-size(1.6);
     position: fixed;
-    left: -50%;
+    left: 2rem;
     top: 50%;
     z-index: 1000;
     transform: rotateZ(-90deg) translate(-50%, 0);
@@ -196,10 +197,6 @@
     backface-visibility: hidden;
     mix-blend-mode: difference;
     transition: left 1s ease-in-out;
-
-    &.is-inview {
-        left: 2rem;
-    }
 
     strong {
         @include font-montserrat-bold;
