--- a/styles/generic/_generic.locomotive.scss
+++ b/styles/generic/_generic.locomotive.scss
@@ -1,4 +1,4 @@
-/*! locomotive-scroll v4.1.1 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
+/*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
 html.has-scroll-smooth {
     overflow: hidden;
 }
@@ -79,4 +79,17 @@ html.has-scroll-dragging {
 [data-scroll-direction='horizontal'] .c-scrollbar_thumb {
     right: auto;
     bottom: 0;
+}
+html.has-scroll-smooth {
+    backface-visibility: hidden;
+    transform: translateZ(0);
+}
+
+[data-load-container] {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
 }
