--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -188,7 +188,8 @@
 .c-header__emailus {
     @include font-size(1.6);
     position: fixed;
-    left: 2rem;
+    left: -2rem;
+    padding-bottom: 2rem;
     top: 50%;
     z-index: 1000;
     transform: rotateZ(-90deg) translate(-50%, 0);
@@ -196,7 +197,7 @@
     background-color: transparent;
     backface-visibility: hidden;
     mix-blend-mode: difference;
-    transition: left 1s ease-in-out;
+    transition: left 1s ease-in-out 1s;
 
     strong {
         @include font-montserrat-bold;
@@ -221,5 +222,9 @@
 
     a {
         color: #ffffff;
+    }
+
+    &.is-inview {
+        left: 2rem;
     }
 }
