--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -11,7 +11,7 @@
     line-height: 100%;
     padding: 12px 40px;
     text-decoration: none;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease-in-out;
 
     &:hover {
         background-color: transparent;
@@ -23,8 +23,5 @@
         display: inline-block;
         margin-left: $global-spacing-unit-xxsmall;
         vertical-align: bottom;
-    }
-
-    @include media('>tablet') {
     }
 }
