--- a/styles/components/_homeservices.scss
+++ b/styles/components/_homeservices.scss
@@ -49,6 +49,9 @@
 .c-home-services__item {
     grid-column: span 6;
     padding-bottom: $unit-large;
+    opacity: 0;
+    transform: translateY(100%);
+    transition: transform 0.8s ease-in-out, opacity 1.2s ease-in-out;
 
     @include media('>=desktop') {
         grid-column: span 4;
@@ -62,6 +65,11 @@
     p {
         @include font-size(1.4);
         line-height: 140%;
+    }
+
+    &.is-inview {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
 
