--- a/styles/components/_splittext.scss
+++ b/styles/components/_splittext.scss
@@ -6,5 +6,9 @@
     display: inline-block;
     position: relative;
     transform: translateY(100%);
-    transition: transform 1s ease-in-out;
+    transition: transform 0.5s ease-in-out;
+
+    &.is-inview {
+        transform: translateY(0%);
+    }
 }
